# newsletters

./: .gitignore  .importlinter  404.html  CLAUDE.md  GSD.md  RETRO.md  WHERE-WE-ARE.md  article-semantic-spine.html  index.html  newsletter-jj.html  newsletter-nate.html  newsletter-newcomer.html  pyproject.toml  report-datamodel.html  report-rev1.html
.claude/: gsd-file-manifest.json  gsd-install-state.json
.claude/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.devcontainer/: requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml  web-ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  brief.md  config.json
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/notes/: 2026-07-03-web-round2-fixprompt.md  2026-07-09-casespec-implementation-notes.md  a2-problem-lifecycle-decision.md  ai-optional-pydantic-plugin-leak.md
.planning/research/: 2026-06-15-market-validity-and-competition.md  2026-07-03-pages-publish-forensics.md  ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: promotion-terminology-guard.md
content/: README.md
content/module/: ids.json  module-a.yml
content/rev1/: ids.json
content/work/: ids.json
design-reference/: Newsletters - Home.html  Signals Article.html  Signals Hub.html  Signals Newsletter.html  Signals Proposal.html  Signals Report.html  Signals Show.html
design-reference/newsletters/: home-atoms.jsx  home.jsx
design-reference/signals/: article.jsx  atoms.jsx  hub.jsx  newsletter.jsx  proposal.jsx  report.jsx  show.jsx  tokens.css
design-reference/signals-navigation/: README.md  Signals Navigation.dc.html
docs/: architecture.md  case-spec.md  collaboration.md  design-system.md  product-spec.md  roadmap.md  surfaces.md  vision.md
mcp/: README.md
src/newsletters/: __init__.py  _yaml_loader.py  capture.py  casespec.py  cli.py  compose.py  diagrams.py  dogfood.py  learning.py  locators.py  modulesite.py  problem.py  promote.py  publish.py  render.py  review.py  semantic.py  site.py  swimlane.py  templates.py  worksurface.py
tests/: conftest.py  test_abstraction_guard.py  test_ai_optional.py  test_casespec.py  test_collaboration_contract.py  test_compose.py  test_coverage_roundtrip.py  test_distill_socket.py  test_email_adapter.py  test_email_golden.py  test_excel_adapter.py  test_excel_golden.py  test_faithfulness_gate.py  test_learning.py  test_module_cli.py  test_modulesite.py  test_normalize.py  test_openpyxl_probe.py  test_pbir_reader.py  test_powerbi_adapter.py  test_powerbi_golden.py  test_pptx_adapter.py  test_pptx_golden.py  test_pptx_loader.py  test_problem.py  test_problem_boundary.py  test_provenance.py  test_provenance_migration.py  test_publish.py  test_render.py  test_review.py  test_review_cli.py  test_semantic.py  test_signals_voice.py  test_site.py  test_swimlane.py  test_swimlane_endpoints.py  test_timestamp_determinism.py  test_tmdl_parser.py  test_worksurface.py
tools/: check_docs_11.py
web/: .gitignore  404.html  README.md  index.html  index.txt  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/article/: index.html  index.txt
web/components/: Breadcrumb.tsx  (+8 more)
(+466 files in other folders)
