[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsletters"
version = "0.1.0"
description = "Framework for semantic information distillation and agent-driven communication workflows."
authors = [
    { name = "JJ Airuoyo", email = "ijairuoyo@gmail.com" },
    { name = "Nate Neibauer", email = "nneibauer044@gmail.com" },
]
# Core runtime deps — NON-AI ONLY (PKG-01). The deterministic capture->review->render spine
# must install and run with zero AI dependencies. Every AI/LLM package lives behind the [ai]
# extra and is lazy-imported inside the AI backend only (CLAUDE.md hard rule). sqlmodel is kept
# because src/newsletters/models.py uses it (`from sqlmodel import SQLModel, Field`) — it is NOT AI.
dependencies = [
    "pydantic>=2",
    "typer[all]",
    "sqlmodel",
]

[project.optional-dependencies]
# AI/LLM backend deps (PKG-02) — lazy-imported only inside the future AI backend, never core.
# pydantic-ai is the single planned backend (AI-01); it transitively pulls logfire (the
# Phase-1 pydantic-plugin leak source), so keeping it OUT of core is the direct fix.
# langsmith (telemetry / phone-home) is DROPPED entirely per CLAUDE.md Out-of-Scope — it is
# NOT relocated here. langchain/langgraph are removed entirely (zero usage; not the backend).
ai = ["pydantic-ai"]
# Excel (.xlsx) adapter dep (ADAPT-03) — openpyxl is NON-AI, pure-Python, MIT, spec-named, and
# PRE-APPROVED (CONTEXT decision 1 + RESEARCH Package Legitimacy Audit). It lives behind an extra
# and is lazy-imported inside the Excel adapter only (mirror the [ai] discipline), so bare
# `pip install .` still runs the deterministic spine with zero openpyxl and zero AI.
excel = ["openpyxl"]
# PowerPoint (.pptx) adapter dep (ADAPT-04) — python-pptx is NON-AI, MIT, spec-named, and
# PRE-APPROVED (CONTEXT decision 1 + RESEARCH Package Legitimacy Audit; the only SUS signal is
# `unknown-downloads`, a known PyPI-API false positive). It lives behind an extra and is
# lazy-imported inside the PPTX adapter only (mirror the [ai]/[excel] discipline), so bare
# `pip install .` still runs the deterministic spine with zero python-pptx and zero AI. Its
# transitive C-extensions (lxml, Pillow, XlsxWriter, typing_extensions) are sandboxed behind the
# extra and never reachable from core. python-pptx ships no type stubs and we do NOT add a
# types-* package (mirror the Excel Any-typing decision).
pptx = ["python-pptx"]
# YAML module-config loader dep (LANE-04) — PyYAML is NON-AI, MIT, pure-Python-capable, and
# spec-named for the swim-lane config path. It lives behind an extra and is lazy-imported inside
# the config loader only (mirror the [ai]/[excel]/[pptx] discipline), so bare `pip install .` still
# runs the deterministic capture -> review -> render spine with zero PyYAML and zero AI. Config
# text is parsed with yaml.safe_load ONLY (never yaml.load; config is data, not code).
config = ["PyYAML>=6.0.3"]
panel = ["panel", "holoviews", "bokeh", "numpy", "pandas"]
# import-linter (PKG-04): the static forbidden-contract tool enforcing core has no AI import edge.
dev = ["pytest", "black", "ipdb", "ipython", "isort", "mypy", "import-linter"]
test = ["pytest"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"

# Scripts
[project.scripts]
newsletters = "newsletters.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
